delete: Promo overflow hidden, fix: Sidebar bem name, Aauth input min maxLength, MoviesCard 365px breakpoint

--- a/src/components/Main/Promo/Promo.css
+++ b/src/components/Main/Promo/Promo.css
@@ -12,13 +12,6 @@
   }
 }
 
-@media (max-width: 680px) {
-  .promo {
-    object-fit: fill;
-    overflow: hidden;
-  }
-}
-
 @media (max-width: 430px) {
   .promo {
     padding: 183px 0 40px;
