--- a/src/components/Movies/MoviesCard/MoviesCard.css
+++ b/src/components/Movies/MoviesCard/MoviesCard.css
@@ -10,7 +10,7 @@
   }
 }
 
-@media (max-width: 339px) {
+@media (max-width: 365px) {
   .card {
     width: 300px;
   }
@@ -31,7 +31,7 @@
   }
 }
 
-@media (max-width: 339px) {
+@media (max-width: 365px) {
   .card__photo {
     width: 300px;
     height: 168px;
